--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -22,7 +22,7 @@ nav li {
     margin-right: 20px;
 }
 
-nav a {
+nav li {
     text-decoration: none;
     font-size: 20px;
     font-family: "Poppins", sans-serif;
@@ -35,6 +35,6 @@ h1{
     text-shadow: 2px 2px 4px #72C3E6
 }
 
-nav a:hover{
+nav li:hover{
     color: aqua;
 }
