--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -2,6 +2,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #72C3E6;
+    color: #fff;
     margin: 0;
     padding: 0;
 }
@@ -38,3 +39,25 @@ h1{
 nav li:hover{
     color: aqua;
 }
+
+footer{
+    background-color: #003C56;
+    width: 100%;
+}
+
+footer p{
+    color: #fff;
+    font-family: "Iceberg", sans-serif;
+    font-size: 30px;
+   
+}
+
+footer ul{
+    list-style: none;
+}
+
+footer a{
+color: #fff;
+font-family: "Poppins", sans-serif;
+}
+
