--- a/src/home/style.css
+++ b/src/home/style.css
@@ -3,17 +3,44 @@ background-attachment: fixed;
 flex-direction: row;
 }
 
-button{
-    background-color: #fff2f2;
-    width: 100px;
-    height: 50px;
+.button-add{
+    background-color: #003C56;
+    color: white;
+    padding: 10px 20px;
     border: none;
-    border-radius: 35px;
-    margin: 15px;
-    transition: background-color 0.2s;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: block; 
+    margin: 0 auto;
 }
 
-button:hover{
+.button-add:hover{
     background-color: #d2eaff;
     color:#001eff;
 }
+
+.produto-image {
+    max-width: 100%;
+    width: 400px;
+    height: 400px;
+    height: auto;
+    display: block; 
+    margin: 0 auto;
+    margin-bottom: 15px;
+    border-radius: 8px;
+  }
+
+.produto-title{
+    text-align: center;
+    margin: 15px;
+    margin: 0 auto;
+    display: block;
+
+}
+
+.produto-preco{
+    text-align: center;
+    text-shadow: 2px 2px 4px #000000;
+}
+
