--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -35,40 +35,72 @@ h1{
     font-family: "Iceberg", sans-serif;
     text-shadow: 2px 2px 4px #72C3E6
 }
+.title-produtos,.title-oferta {
+    font-size: 35px;
+    font-family: "Iceberg", sans-serif;
+    text-shadow: 2px 2px 4px #003C56
+}
 
 nav li:hover{
     color: aqua;
 }
 
-footer{
+footer {
     background-color: #003C56;
-    width: 100%;
-}
-
-footer p{
-    color: #fff;
-    font-family: "Iceberg", sans-serif;
-    font-size: 30px;
-   
-}
-
-footer ul{
-    list-style: none;
-}
-
-footer a{
-color: #fff;
-font-family: "Poppins", sans-serif;
+    color: white;
+    text-shadow: 2px 2px 4px #6547db;
+    text-align: center;
+    padding: 10px;
 }
 
 .container-produto{
     background-color: #0084BC;
-    left: 15px;
-    width: 600px;
-    height: 520px;
+    width: 450px;
+    height: 380px;
     border-radius: 20px;
-    margin: 20px;
-    flex: 1 1 calc(33.333% - 40px); /* 3 itens por linha, considerando margem e espaçamento */
-    
+    margin: 20px;    
+    max-width: 900px;
+    float:left;
 }
 
+.button-add{
+    background-color: #003C56;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: block; 
+    margin: 0 auto;
+    box-shadow: 0 4px 6px rgba(50, 59, 72, 0.2);
+}
+
+.button-add:hover{
+    background-color: #d2eaff;
+    color:#001eff;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);
+}
+
+.produto-image {
+    max-width: 100%;
+    width: 50%;
+    height: auto;
+    display: block; 
+    margin: 0 auto;
+    margin-bottom: 15px;
+    border-radius: 8px;
+  }
+
+.produto-title{
+    text-align: center;
+    margin: 25px 20px 25px 20px;
+    margin: 0 auto;
+    display: block;
+
+}
+
+.produto-preco{
+    text-align: center;
+    text-shadow: 2px 2px 4px #000000;
+}
