--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -74,14 +74,29 @@ nav li:hover{
     position: relative;
 }
 
-.container-produto{
+.container-produto {
     background-color: #0084BC;
     width: 450px;
-    height: 380px;
+    height: 450px;
     border-radius: 20px;
-    margin: 20px;    
+    margin: 20px;
     max-width: 900px;
     float: left;
+    transition: background-color 0.3s ease; /* Transição suave para a mudança de cor */
+}
+
+/* Animação de vibração */
+@keyframes vibrate {
+    0%, 100% { transform: translateX(0); }
+    20% { transform: translateX(-3px); }
+    40% { transform: translateX(3px); }
+    60% { transform: translateX(-3px); }
+    80% { transform: translateX(3px); }
+}
+
+.container-produto:hover {
+    background-color: #005F8C; /* Muda a cor de fundo ao passar o mouse */
+    animation: vibrate 0.3s ease-in-out; /* Aplica a animação de vibração */
 }
 
 .button-add{
